fixed horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,4 @@
-
+.container {
+  overflow: hidden;
+  width: 100vw;
+}
