--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -43,4 +43,7 @@
   .experience__text > button {
     font-size: 2rem;
   }
+  .experience__header {
+    text-align: center;
+  }
 }
