--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  background-image: url("../../assets/images/buildingResize2.jpg");
+  background-image: url("../../assets/images/buildingResize.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   justify-content: center;
